01-hello_world_rest_api/deploy/Istio-learning/01-helloworld-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-world-rest-api
  name: hello-world-rest-api
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world-rest-api
  strategy:
#    rollingUpdate:
#      maxSurge: 25%
#      maxUnavailable: 25%
    type: Recreate
  template:
    metadata:
      labels:
        app: hello-world-rest-api
    spec:
      containers:
      - image: moon1z10/k8s-learning:hello_world_rest_api-0.0.1-SNAPSHOT
        imagePullPolicy: IfNotPresent
        name: hello-world-rest-api
        ports:
        - name: liveness-port
          containerPort: 8080
          hostPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 400m
            memory: 1024Mi #256Mi 
        readinessProbe:
          httpGet:
            path: /
            port: liveness-port
          failureThreshold: 1
          periodSeconds: 10
          initialDelaySeconds: 30
        livenessProbe:
          httpGet:
            path: /
            port: liveness-port
          failureThreshold: 3
          periodSeconds: 10
          initialDelaySeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world-rest-api
  name: hello-world-rest-api
  namespace: default
spec:
  #type: LoadBalancer
  ports:
  - name: http-8080
    port: 8080
    targetPort: 8080
  selector:
    app: hello-world-rest-api
