01-hello_world_rest_api/deploy/Istio-learning/06-helloworld-canary.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-world-virtual-services
spec:
  hosts:
    - "*"
  gateways:
    - hello-world-gateway
  http:
    - match:
        - uri:
            exact: /hello-world
      route:
        - destination:
            host: hello-world-rest-api
            subset: v1
          weight: 0
        - destination:
            host: hello-world-rest-api
            subset: v2
          weight: 100
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: hello-world-rest-api
spec:
  host: hello-world-rest-api
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
